maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:2: error: illegal start of definition
package maze.shortestpath;
^